//
//  DSIdentifiers.swift
//  TipCalculator-iOS
//
//  Created by Diggo Silva on 06/05/26.
//

import Foundation

enum DSIdentifiers {
    static let totalPerPersonValueLabel = "totalPerPersonValueLabel"
    static let totalBillValueLabel = "totalBillValueLabel"
    static let tipAmountValueLabel = "tipAmountValueLabel"
    static let billAmountTextField = "billAmountTextField"
    
    static let tip10PercentButton = "tip10PercentButton"
    static let tip15PercentButton = "tip15PercentButton"
    static let tip20PercentButton = "tip20PercentButton"
    static let customTipButton = "customTipButton"
    
    static let decreasePeopleButton = "decreasePeopleButton"
    static let peopleCountValueLabel = "peopleCountValueLabel"
    static let increasePeopleButton = "increasePeopleButton"
    
    static let clearButton = "clearButton"
    static let customTipAlert = "customTipAlert"
    static let customTipTextField = "customTipTextField"
}
